<LinearLayout android:orientation="vertical" android:id="@+id/loginRoot"
	android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">




	<LinearLayout
	    android:id="@+id/LinearLayout01"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1.0"
	    android:background="@drawable/bg"
	    android:orientation="vertical" >

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="210dp"
		    android:layout_height="108dp"
		    android:layout_gravity="center_horizontal"
		    android:paddingBottom="0dp"
		    android:paddingTop="50dp"
		    android:src="@drawable/loginname" />

		<RelativeLayout
		    android:id="@+id/RelativeLayout02"
		    android:layout_width="fill_parent"
		    android:layout_height="200dp"
		    android:layout_marginLeft="15.0px"
		    android:layout_marginRight="15.0px"
		    android:layout_marginTop="20.0dp"
		    android:background="@drawable/login_back"
		    android:paddingBottom="5.0px"
		    android:paddingTop="21.0px" >

			<EditText
			    android:id="@+id/login_edit_account"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_margin="10dp"
			    android:layout_marginBottom="5.0px"
			    android:layout_marginLeft="5.0dip"
			    android:layout_marginRight="5.0dip"
			    android:layout_marginTop="5.0dip"
			    android:background="@drawable/qq_edit_login"
			    android:hint="@string/strInputAccHint"
			    android:inputType="text"
			    android:paddingLeft="45dp"
			    android:saveEnabled="true"
			    android:singleLine="true" />

			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
			
			<EditText
			    android:id="@+id/login_edit_pwd"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignLeft="@+id/login_edit_account"
			    android:layout_alignRight="@+id/login_edit_account"
			    android:layout_below="@+id/login_edit_account"
			    android:layout_marginRight="1.0dip"
			    android:background="@drawable/qq_edit_login"
			    android:inputType="textPassword"
			    android:maxLength="16"
			    android:paddingLeft="45.0sp"
			    android:saveEnabled="true" />

			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/login_edit_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/login_edit_pwd" />

			<CheckBox
			    android:id="@+id/login_cb_savepwd"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignLeft="@+id/login_edit_pwd"
			    android:layout_alignTop="@+id/login_btn_login"
			    android:button="@drawable/qq_btn_check"
			    android:checked="true"
			    android:paddingLeft="30.0dp"
			    android:text="@string/opt_remember"
			    android:textColor="#ff222222"
			    android:textSize="16.0sp" />

			<CheckBox
			    android:id="@+id/login_cb_autoLogin"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBottom="@+id/login_btn_login"
			    android:layout_alignLeft="@+id/login_edit_pwd"
			    android:button="@drawable/qq_btn_check"
			    android:checked="true"
			    android:paddingLeft="30.0dp"
			    android:text="@string/opt_autologin"
			    android:textColor="#ff222222"
			    android:textSize="16.0sp" />
			
			<Button
			    android:id="@+id/login_btn_login"
			    android:layout_width="130.0dp"
			    android:layout_height="50dp"
			    android:layout_alignRight="@+id/login_edit_account"
			    android:layout_below="@+id/login_edit_pwd"
			    android:layout_marginTop="25dp"
			    android:onClick="loginClick"
			    android:text="@string/login" />

		</RelativeLayout>
	</LinearLayout>
</LinearLayout>